--- a/index.htm
+++ b/index.htm
@@ -146,7 +146,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/bac1.jpeg" alt="">
+        <img src="https://wallpapercave.com/wp/wp8778363.jpg" alt="">
         <div class="container">
           <div class="carousel-caption text-start">
             <h1>Gungiyar Matasan Programmers</h1>
